--- a/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-envelope"></i>Leer mensajes</h1>
+                    <h1><i class="fa fa-fw fa-envelope"></i>Mensajes</h1>
                 </div>
                 {% for i in 1..7 %}
                     {% if loop.index is odd %}
