--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
             'bower/fontawesome/css/font-awesome.css'
             '@ArchmageGameBundle/Resources/public/css/theme.css'
             '@ArchmageGameBundle/Resources/public/css/style.css'
+            'bower/datatables-bootstrap3-plugin/media/css/datatables-bootstrap3.css'
             %}
             <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
             <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css'>
@@ -35,6 +36,7 @@
                 {% for flashMessage in flashMessages %}
                     <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center fade in" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
+                        {# |raw para que pase por el controlador codigos html como <a href>, sino los trunca #}
                         <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> {{ flashMessage|raw }}
                     </div>
                 {% endfor %}
@@ -49,6 +51,8 @@
     {% block javascripts %}
         {% javascripts output='js/base.min.js'
             'bower/jquery/jquery.js'
+            'bower/datatables/media/js/jquery.dataTables.js'
+            'bower/datatables-bootstrap3-plugin/media/js/datatables-bootstrap3.js'
             'bower/bootstrap/dist/js/bootstrap.js'
             'bower/bootstrap-validator/js/validator.js'
         %}
