--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -7,9 +7,86 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-line-chart"></i>Ranking</h1>
+                    <h1><i class="fa fa-fw fa-lg fa-line-chart"></i>Ranking</h1>
                 </div>
+                <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-list-ol"></i></th>
+                            <th class="text-center">Nick</th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-cogs"></i></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% set faction = ['danger','primary','info','success','warning'] %}
+                    {% for i in 1..200 %}
+                        <tr class="{{ faction[random(4)] }}">
+                            <td class="text-right">{{ random(1000000) }}</td>
+                            <td>Nombre de Mago</td>
+                            <td class="text-center">
+                                <a href="{{ path('archmage_game_account_outbox') }}"><i class="fa fa-fw fa-lg fa-send"></i></a>
+                                <a href="{{ path('archmage_game_army_attack') }}"><i class="fa fa-fw fa-lg fa-flag"></i></a>
+                                <a href="{{ path('archmage_game_magic_conjure') }}"><i class="fa fa-fw fa-lg fa-magic"></i></a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                        <tr class="default">
+                            <td class="text-right">{{ random(1000000) }}</td>
+                            <td>Fergardi</td>
+                            <td class="text-center">
+                                <a href="{{ path('archmage_game_account_outbox') }}"><i class="fa fa-fw fa-lg fa-send"></i></a>
+                                <a href="{{ path('archmage_game_army_attack') }}"><i class="fa fa-fw fa-lg fa-flag"></i></a>
+                                <a href="{{ path('archmage_game_magic_conjure') }}"><i class="fa fa-fw fa-lg fa-magic"></i></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        $(document).ready(function() {
+            $('#datatable').dataTable({
+                "order": [[ 0, "desc" ]],
+                "aoColumns": [
+                    null,
+                    null,
+                    { "bSortable": false }
+                ],
+                "sDom": 't<"col-xs-12 text-center"fp>',
+                "displayStart": 0,
+                'pagingType': 'full_numbers',
+                "language": {
+                    "sProcessing": "Procesando...",
+                    "sLengthMenu": "Ver _MENU_",
+                    "sZeroRecords": "No se encontraron resultados",
+                    "sEmptyTable": "Ningún mago disponible",
+                    "sInfo": "Mostrando magos del _START_ al _END_ de un total de _TOTAL_ registros",
+                    "sInfoEmpty": "Mostrando magos del 0 al 0 de un total de 0 registros",
+                    "sInfoFiltered": "(filtrado de un total de _MAX_ magos)",
+                    "sInfoPostFix": "",
+                    "sSearch": "",
+                    "searchPlaceholder": "Buscar",
+                    "sUrl": "",
+                    "sInfoThousands": ",",
+                    "sLoadingRecords": "Cargando...",
+                    "oPaginate": {
+                        "sFirst": "",
+                        "sLast": "",
+                        "sNext": "<i class='fa fa-fw fa-search'></i>",
+                        "sPrevious": "<i class='fa fa-fw fa-search'></i>"
+                    },
+                    "oAria": {
+                        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                    }
+                }
+            });
+        });
+        $.fn.dataTableExt.pager.numbers_length = 5;
+    </script>
 {% endblock %}
