--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -10,6 +10,118 @@
                     <h1><i class="fa fa-fw fa-user-times"></i>Licenciar</h1>
                 </div>
             </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center">Dragones Verdes <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/unit/nature/greendragon.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-times"></i> Desbandar</button>
+                                    </div>
+                                    <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
+                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-info">
+                    <div class="panel-heading text-center">Dragones Azules <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/unit/ghost/bluedragon.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-times"></i> Desbandar</button>
+                                    </div>
+                                    <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
+                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-danger">
+                    <div class="panel-heading text-center">Dragones Rojos <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/unit/doom/reddragon.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-times"></i> Desbandar</button>
+                                    </div>
+                                    <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
+                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center">Dragones Negros <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/unit/darkness/blackdragon.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-times"></i> Desbandar</button>
+                                    </div>
+                                    <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
+                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
