--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -8,44 +8,44 @@
         <div class="jumbotron text-center">
             <h1>Arch<i class="fa fa-fw fa-eye"></i>Mage</h1>
             <form class="form-signin" data-toggle="validator">
-                <input type="text" class="form-control" placeholder="Usuario" required>
+                <input type="text" class="form-control" placeholder="Usuario" required autofocus>
                 <input type="password" class="form-control" placeholder="Contraseña" required>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+                <button class="btn btn-lg btn-default btn-block" type="submit"><i class="fa fa-fw fa-lg fa-sign-in"></i> Entrar</button>
             </form>
             <a href="#">Registrar</a> - <a href="#">Recuperar</a> - <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
             <br><br>
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-2">
                     <a href="{{ path('archmage_game_home_help') }}#doom" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"/></a>
-                    <div class="caption hidden-xs text-danger">
+                    <div class="caption hidden-xs hidden-sm text-danger">
                         <h3>Destrucción</h3>
                         <small>Fuego y sangre</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
                     <a href="{{ path('archmage_game_home_help') }}#darkness" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
-                    <div class="caption hidden-xs text-warning">
+                    <div class="caption hidden-xs hidden-sm text-warning">
                         <h3>Oscuridad</h3>
                         <small>No muerte</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
                     <a href="{{ path('archmage_game_home_help') }}#nature" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"/></a>
-                    <div class="caption hidden-xs text-success">
+                    <div class="caption hidden-xs hidden-sm text-success">
                         <h3>Naturaleza</h3>
                         <small>Quid pro quo</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
                     <a href="{{ path('archmage_game_home_help') }}#ghost" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"/></a>
-                    <div class="caption hidden-xs text-info">
+                    <div class="caption hidden-xs hidden-sm text-info">
                         <h3>Fantasmal</h3>
                         <small>Mente y espíritu</small>
                     </div>
                 </div>
                 <div class="col-xs-2">
                     <a href="{{ path('archmage_game_home_help') }}#sacred" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"/></a>
-                    <div class="caption hidden-xs text-primary">
+                    <div class="caption hidden-xs hidden-sm text-primary">
                         <h3>Sagrado</h3>
                         <small>Luz y pureza</small>
                     </div>
