--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -19,7 +19,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/artifact.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/letter.jpg') }}">
                             </div>
                             <div class="col-xs-9">
-
+                                <p>Texto descriptivo</p>
                             </div>
                         </div>
                     </div>
