--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -7,24 +7,32 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-money"></i>Recaudar oro</h1>
+                    <h1><i class="fa fa-fw fa-money"></i> Recaudar oro</h1>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Gana oro aplicando impuestos</div>
-                    <div class="panel-body text-center">
-                        <form data-toggle="validator">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }} <i class="fa fa-fw fa-lg fa-money"></i> {{ random(10000000)|format }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
                             <div class="form-group has-feedback">
                                 <div class="input-group">
-                                    <div class="input-group-addon"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}"/></div>
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Recaudar</button>
+                                    </div>
                                     <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
                         </form>
-                    </div>
-                    <div class="panel-footer">
-                        Aquí puedes ganar mucho oro exprimiendo al máximo a tus leales subditos. Necesitas grandes cantidades de oro para pagar mantenimientos, contratar héroes, consturir y pujar en el mercado negro.
                     </div>
                 </div>
             </div>
