--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -5,9 +5,33 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-3 col-md-6 col-xs-12">
+            <div class="col-xs-12">
                 <div class="page-header text-center">
                     <h1><i class="fa fa-fw fa-magic"></i>Conjurar</h1>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center">Invocar Esqueletos</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/spell/darkness/summonskeletons.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-tint"></i> Conjurar</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
