--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -10,21 +10,29 @@
                     <h1><i class="fa fa-fw fa-search"></i>Explorar</h1>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Invierte turnos para encontrar tierras</div>
-                    <div class="panel-body text-center">
-                        <form data-toggle="validator">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }} <i class="fa fa-fw fa-lg fa-globe"></i> {{ random(3000)|format }}</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+                                <p>Texto descriptivo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form class="form-inline" data-toggle="validator">
                             <div class="form-group has-feedback">
                                 <div class="input-group">
-                                    <div class="input-group-addon"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/land.jpg') }}"/></div>
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Explorar</button>
+                                    </div>
                                     <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
                         </form>
-                    </div>
-                    <div class="panel-footer">
-                        Aquí puedes invertir turnos para encontrar más tierras vírgenes que añadir a tus dominios. Necesitas tierras para construir nuevos edificios, o para recuperarte de un asedio. Ten en cuenta que, cuantas más tierras tengas en tu poder, menos encontrarás explorando, y que existe un número máximo de tierras que puedes poseer.
                     </div>
                 </div>
             </div>
